# TCCPrivado

./: .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  jenkinsfile  pyproject.toml  testes.dockerfile
.github/workflows/: testes.yaml
arquivos/dataFrames/: DataSetOriginal.csv
arquivos/parametros/: standard_scaler.pkl  vetor_tfidf.pkl
arquivosNecessarios/Resultados/: JsonRecomendacoes.txt
config/: config.ini  configuration.py
entidades/: KNN.py  dados.py  treinamento.py
src/arquivos/dataFrames/: dataSetTreinamento.csv
src/arquivos/parametros/: onehot_encoder.pkl
src/config/: config.ini  configExemplo.ini  configuration.py
src/data/: database.py
src/dtos/: arquivosDTO.py  modelosDTO.py  usuariosDTO.py
src/entidades/: arquivos.py  modelos.py  tratamentoDados.py  treinamentos.py  usuarios.py
src/repositories/: ArquivoRepository.py  ModeloRepository.py  UsuarioRepository.py
tests/: test_api.py
